# futarchy_Boardroom

./: .gitignore  ARCHITECTURE.md  Anchor.toml  Cargo.toml  DevNotes.md  PROJECT_SUMMARY.md  README.md  SETUP.md  design.md  package.json  tsconfig.json
app/: README-METADATA.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/pinata/upload/: route.ts
app/src/app/budgets/: page.tsx
app/src/components/: BudgetCard.tsx  BudgetList.tsx  CreateBudgetForm.tsx  CreateExpenseForm.tsx  ExpenseList.tsx  WalletButton.tsx
app/src/contexts/: WalletContextProvider.tsx
app/src/hooks/: useProgram.ts
app/src/utils/: anchor.ts  constants.ts  metaplex.ts  pinata.ts
programs/metaplex-budget/: Cargo.toml
programs/metaplex-budget/src/: lib.rs
tests/: metaplex-budget.ts
