[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
# Uncomment if you need to patch any dependencies
# solana-program = { git = "https://github.com/solana-labs/solana", tag = "v1.16.0" }

