[package]
name = "metaplex-budget"
version = "0.1.0"
description = "Solana budget management program using Metaplex NFT collections"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "metaplex_budget"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
mpl-token-metadata = "5.1.1"

